# css-claude

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md
dashboard/: .dockerignore  .env.example  Dockerfile  README.ko.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
dashboard/alembic/: env.py
dashboard/alembic/versions/: 0001_initial.py  0002_phase_hierarchy.py
dashboard/backend/: config.py  db.py  deps.py  main.py  models.py  sse.py  watcher.py
dashboard/backend/routers/: artifacts.py  gates.py  history.py  internal.py  projects.py  sessions.py  sse_router.py
dashboard/backend/services/: __init__.py  archive.py  artifact_reader.py  epic_flow.py  project_registry.py  queue_writer.py  session_reader.py
dashboard/backend/tests/: conftest.py  test_archive.py  test_artifact_reader.py  test_config.py  test_db.py  test_epic_flow.py  test_main.py  test_migration.py  test_models.py  test_project_registry.py  test_queue_writer.py  test_router_artifacts.py  test_router_gates.py  test_router_history.py  test_router_internal.py  test_router_projects.py  test_router_sessions.py  test_session_reader.py  test_sse.py  test_sse_endpoint.py  test_watcher.py
dashboard/bridge/: bridge.py  css-dashboard-bridge.service
dashboard/bridge/tests/: test_bridge.py
dashboard/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/frontend/src/: App.tsx  main.tsx  types.ts
dashboard/frontend/tests/: test_App.test.tsx  test_ArtifactAccordion.test.tsx  (+13 more)
(+245 files in other folders)
